# docgraph

./: .gitignore  .prettierignore  AGENT.md  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  ci_main_latest.txt  cliff.toml  docgraph.toml  docgraph.vsix  install.ps1  install.sh  lcov.info  package-lock.json  package.json  prek.toml
.agent/: skills
.claude-plugin/: marketplace.json
.devcontainer/: Dockerfile  README.md  devcontainer.json  post-create.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  devcontainer-release.yml  release.yml
.zed/: settings.json
benches/: performance.rs
doc/: overview.md
doc/actors/: system_users.md  systems.md  users.md
doc/architecture/: guide.md  testing.md
doc/constraints/: development.md  quality.md
doc/decisions/: adr_001_myst_syntax.md  ci-env-parity.md  e2e-testing.md  error-handling.md  layered-architecture.md  markdown-format.md  perf.md  security.md  single-responsibility.md  testing.md  thin-handlers.md
doc/devel/: README.md  architecture.md  guide.md  (+1 more)
docgraph-plugin/: .lsp.json
src/: cli.rs  collect.rs  config.rs  lib.rs  lint.rs  lsp.rs  main.rs  parse.rs  types.rs  walk.rs
test_data/: docgraph.toml  sample.md
tests/: cli.rs  e2e.rs  e2e_check.rs  e2e_describe.rs  e2e_graph.rs  e2e_list.rs  e2e_rule.rs  e2e_trace.rs  lsp.rs
vscode-extension/: README.md  package-lock.json  package.json  tsconfig.json
vsix/: .vscodeignore  LICENSE.md  README.md  biome.json  package-lock.json  package.json  tsconfig.json
zed-extension/: Cargo.toml  extension.toml  extension.wasm
(+184 files in other folders)
