[package]
name = "docgraph"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive"] }
ignore = "0.4.25"
pathdiff = "0.2.3"
regex = "1.12.2"
rumdl = "0.1.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
thiserror = "2.0"
toml = "0.9.11"
tower-lsp = "0.20.0"
tokio = { version = "1.37.0", features = ["full"] }

[dev-dependencies]
tempfile = "3.24.0"
assert_cmd = "2"
predicates = "3"

