[package]
name = "docgraph"
version = "0.2.1"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive"] }
ignore = "0.4.25"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
thiserror = "2.0"
toml = "0.9.11"
lsp-server = "0.7.6"
lsp-types = "0.94.1"

dashmap = "6.1.0"
pulldown-cmark = "0.13.0"
crossbeam-channel = "0.5.15"

[dev-dependencies]
tempfile = "3.24.0"
assert_cmd = "2"
predicates = "3"
criterion = { version = "0.5", features = ["html_reports"] }
tokio = { version = "1.37.0", features = ["full"] }

[[bench]]
name = "performance"
harness = false
